...
          tabBarIcon: ({ color, size }) => <Feather color={color} name="activity" size={size} />,
        }}
      />
      <Tabs.Screen
        name="cuenta"
        options={{
          title: "CUENTA",
          tabBarIcon: ({ color, size }) => <Feather color={color} name="user" size={size} />,
        }}
      />
    </Tabs>
    </View>
  );
...
